--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Al Furqan Class</title>
+    <meta name="description"
+        content="Al Furqan Class - The Best Class di MAN IC Palu. Profil kelas, anggota, dan kegiatan siswa-siswi berprestasi MAN Insan Cendekia Kota Palu.">
+    <meta name="keywords"
+        content="the best class di man ic palu, al furqan class, man ic kota palu, MAN Insan Cendekia Palu, siswa berprestasi">
+    <meta name="author" content="Al Furqan Class">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://alfurqan.com/">
+    <meta property="og:title" content="Al Furqan Class - The Best Class di MAN IC Palu">
+    <meta property="og:description"
+        content="Profil kelas Al Furqan, MAN Insan Cendekia Kota Palu. Lihat kegiatan dan prestasi kami.">
+    <meta property="og:image" content="logo.png">
+
+    <title>Al Furqan Class - The Best Class di MAN IC Palu</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap"
         rel="stylesheet" media="print" onload="this.media='all'">
@@ -414,7 +428,7 @@
                     <img src="member7.jpg" alt="Siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Student</div>
+                    <div class="member-name">Muh. Rezky Ramadhan</div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -459,7 +473,7 @@
                     <img src="member11.jpg" alt="Siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Member 11</div>
+                    <div class="member-name">Tegar Faskho Susanto</div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -492,7 +506,7 @@
                     <img src="member14.jpg" alt="Siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Member 14</div>
+                    <div class="member-name">Arista DG Hasan</div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -503,7 +517,7 @@
                     <img src="member15.jpg" alt="Siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Member 15</div>
+                    <div class="member-name">Cahaya Bilqis Ramadhani</div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -547,7 +561,7 @@
                     <img src="member19.jpg" alt="Siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Member 19</div>
+                    <div class="member-name">Nahda Rahmawati Putri</div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -570,7 +584,7 @@
                     <img src="member21.jpg" alt="Siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Member 21</div>
+                    <div class="member-name">Rahma Nur Siqra</div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -581,7 +595,7 @@
                     <img src="member22.jpg" alt="Siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Member 22</div>
+                    <div class="member-name">Syifa Altha Funnisa</div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -592,7 +606,7 @@
                     <img src="member23.jpg" alt="Siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Member 23</div>
+                    <div class="member-name">Indy</div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
