--- a/index.html
+++ b/index.html
@@ -360,7 +360,10 @@
                     <img src="Abdullah_Alghifari.png" alt="Abdullah Alghifari, siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Abdullah Alghifari</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/abdullahalghifariii/" target="_blank"
+                            rel="noopener noreferrer">Abdullah Alghifari</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -371,7 +374,10 @@
                     <img src="Bambang_Arya_S.Adam.png" alt="Bambang Arya S.Adam, siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Bambang Arya S.Adam</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/ryaaadam/" target="_blank" rel="noopener noreferrer">Bambang
+                            Arya S.Adam</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -383,7 +389,10 @@
                         loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Fadhlurrahman Al Muktabar</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/fdhlalm._/" target="_blank"
+                            rel="noopener noreferrer">Fadhlurrahman Al Muktabar</a>
+                    </div>
                     <div class="member-role">Ketua Kelas</div>
                 </div>
             </div>
@@ -394,7 +403,10 @@
                     <img src="Fuad_Bin_Abdul_Aziz.png" alt="Fuad Bin Abdul Aziz, siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Fuad Bin Abdul Aziz</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/fuad_aziss/" target="_blank" rel="noopener noreferrer">Fuad
+                            Bin Abdul Aziz</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -405,7 +417,10 @@
                     <img src="Muh_Albani_Mubarak.jpeg" alt="Muh Albani Mubarak, siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Muh Albani Mubarak</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/albanimbrk_/" target="_blank" rel="noopener noreferrer">Muh
+                            Albani Mubarak</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -417,7 +432,10 @@
                         loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Muh Alfiqri Barack Obama</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/obm_611/" target="_blank" rel="noopener noreferrer">Muh
+                            Alfiqri Barack Obama</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -428,7 +446,10 @@
                     <img src="member7.jpg" alt="Siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Muh. Rezky Ramadhan</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/mhrzkrmadhn/" target="_blank" rel="noopener noreferrer">Muh.
+                            Rezky Ramadhan</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -439,7 +460,10 @@
                     <img src="Muh_Ghazwan_Ats-tsaqib.jpeg" alt="Muh Ghazwan Ats-tsaqib, siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Muh Ghazwan Ats-tsaqib</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/muhghazwan_/" target="_blank" rel="noopener noreferrer">Muh
+                            Ghazwan Ats-tsaqib</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -450,7 +474,10 @@
                     <img src="Moh_taufik.png" alt="Moh Taufik, siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Moh Taufik</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/taufiikk_h/" target="_blank" rel="noopener noreferrer">Moh
+                            Taufik</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -462,7 +489,10 @@
                         loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Rezki Mahindra Manangkari</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/werchlerss3548/" target="_blank"
+                            rel="noopener noreferrer">Rezki Mahindra Manangkari</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -473,7 +503,10 @@
                     <img src="member11.jpg" alt="Siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Tegar Faskho Susanto</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/faskho_baru02/" target="_blank"
+                            rel="noopener noreferrer">Tegar Faskho Susanto</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -484,7 +517,10 @@
                     <img src="Viegath_Syachdriq_Esa.png" alt="Viegath Syachdriq Esa, siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Viegath Syachdriq Esa</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/viegathesa/" target="_blank"
+                            rel="noopener noreferrer">Viegath Syachdriq Esa</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -495,7 +531,10 @@
                     <img src="Alyza_Layla_Nurrahma.jpeg" alt="Alyza Layla Nurrahma, siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Alyza Layla Nurrahma</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/alyzalayla_/" target="_blank" rel="noopener noreferrer">Alyza
+                            Layla Nurrahma</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -506,7 +545,10 @@
                     <img src="member14.jpg" alt="Siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Arista DG Hasan</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/arsthsan/" target="_blank" rel="noopener noreferrer">Arista
+                            DG Hasan</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -517,7 +559,10 @@
                     <img src="member15.jpg" alt="Siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Cahaya Bilqis Ramadhani</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/chyaaqis_/" target="_blank" rel="noopener noreferrer">Cahaya
+                            Bilqis Ramadhani</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -528,7 +573,10 @@
                     <img src="Izza_Nur_Afifa.png" alt="Izza Nur Afifa, siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Izza Nur Afifa</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/_izanurafifa/" target="_blank" rel="noopener noreferrer">Izza
+                            Nur Afifa</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -539,7 +587,10 @@
                     <img src="Dwi_Anggun_Khairunnisa.png" alt="Dwi Anggun Khairunnisa, siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Dwi Anggun Khairunnisa</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/dwiangguun/" target="_blank" rel="noopener noreferrer">Dwi
+                            Anggun Khairunnisa</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -550,7 +601,10 @@
                     <img src="Khayla_Huriyah_Syahla.jpg" alt="Khayla Huriyah Syahla, siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Khayla Huriyah Syahla</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/syhlkhay/" target="_blank" rel="noopener noreferrer">Khayla
+                            Huriyah Syahla</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -561,7 +615,10 @@
                     <img src="member19.jpg" alt="Siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Nahda Rahmawati Putri</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/ndahrptri/" target="_blank" rel="noopener noreferrer">Nahda
+                            Rahmawati Putri</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -573,7 +630,10 @@
                         loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Nur Farah Diba Katili</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/diba.farahh/" target="_blank" rel="noopener noreferrer">Nur
+                            Farah Diba Katili</a>
+                    </div>
                     <div class="member-role">Bendahara</div>
                 </div>
             </div>
@@ -584,7 +644,10 @@
                     <img src="member21.jpg" alt="Siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Rahma Nur Siqra</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/rhmnzz7/" target="_blank" rel="noopener noreferrer">Rahma Nur
+                            Siqra</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -595,7 +658,10 @@
                     <img src="member22.jpg" alt="Siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Syifa Altha Funnisa</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/syifaaltfn_/" target="_blank" rel="noopener noreferrer">Syifa
+                            Altha Funnisa</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -606,7 +672,10 @@
                     <img src="member23.jpg" alt="Siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Indy</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/i.nayyla_/" target="_blank"
+                            rel="noopener noreferrer">Indy</a>
+                    </div>
                     <div class="member-role">Student</div>
                 </div>
             </div>
@@ -622,7 +691,10 @@
                     <img src="Zaid_Ahmad.jpg" alt="Zaid Ahmad, mantan siswa Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Zaid Ahmad</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/z_ahmddd/" target="_blank" rel="noopener noreferrer">Zaid
+                            Ahmad</a>
+                    </div>
                     <div class="member-role">previous Student</div>
                 </div>
             </div>
@@ -633,7 +705,10 @@
                     <img src="Sabrina.jpg" alt="Sabrina, mantan Bendahara Al Furqan" loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Sabrina</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/sabrina_andni/" target="_blank"
+                            rel="noopener noreferrer">Sabrina</a>
+                    </div>
                     <div class="member-role">Previous Bendahara</div>
                 </div>
             </div>
@@ -645,7 +720,10 @@
                         loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Ibrahim Al hanif Kadekoh</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/hanifkadekoh/" target="_blank"
+                            rel="noopener noreferrer">Ibrahim Al hanif Kadekoh</a>
+                    </div>
                     <div class="member-role">previous Student</div>
                 </div>
             </div>
@@ -657,7 +735,10 @@
                         loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Adelia Syifa Lapuna</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/adlsyfa/" target="_blank" rel="noopener noreferrer">Adelia
+                            Syifa Lapuna</a>
+                    </div>
                     <div class="member-role">previous Wakil Ketua Kelasz </div>
                 </div>
             </div>
@@ -669,7 +750,10 @@
                         loading="lazy">
                 </div>
                 <div class="member-info">
-                    <div class="member-name">Fitratunnisa Mapiase</div>
+                    <div class="member-name">
+                        <a href="https://www.instagram.com/fitratunnisa__/" target="_blank"
+                            rel="noopener noreferrer">Fitratunnisa Mapiase</a>
+                    </div>
                     <div class="member-role">previous Student</div>
                 </div>
             </div>
